# verseday

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
docs/: 2026-05-04-recurring-instance-skip-on-delete.md  2026-05-04-recurring-task-duplicates.md  2026-05-05-calendar-integration-plan.md  2026-05-05-calendar-m3-plan.md  2026-05-05-focus-collapsed-sidebar.md  2026-05-05-v20-weekly-plan-commitments-fix.md  2026-05-05-weekly-planning-plan.md  2026-05-06-calendar-m4-plan.md  2026-05-06-calendar-upsert-contract.md  2026-05-06-default-task-estimate.md  2026-05-06-focus-screen-unified.md  2026-05-06-focus-two-column.md  2026-05-06-notes-sync-and-polish.md  2026-05-06-plan-screen-tweaks.md  2026-05-06-shutdown-alignment-spacing.md  2026-05-06-weekly-header-unify.md  2026-05-07-m3-1-singleton-overlays.md  2026-05-07-m3-2-b-2-project-surfaces.md  2026-05-07-m3-2-canonical-tasks-by-id.md  2026-05-07-onboarding-guided-tour.md  2026-05-07-pause-on-relaunch.md  2026-05-07-pause-symmetry.md  2026-05-07-task-as-entity-plan.md  2026-05-07-task-as-entity.md  2026-05-07-tick-effect-resilience.md  2026-05-07-worked-seconds-simplification.md  2026-05-08-m3-2-b-3-weekly-shutdown-surfaces.md  2026-05-08-m3-2-b-4-taskcard-per-row-subscription.md  2026-05-08-m3-2-b-5-bus-cache-direct-sql-retirement.md  2026-05-08-pip-hover-without-focus-via-global-monitor.md  2026-05-08-r-1-right-sidebar-design.md  2026-05-08-right-sidebar-rebuild-brief.md  2026-05-21-meeting-approach-notification.md  (+108 more)
src-tauri/: Cargo.toml  Entitlements.plist.README.md  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  global-shortcut.json
src-tauri/examples/: calendar_recurrence_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  commands.rs  lib.rs  notify.rs
(+146 files in other folders)
