[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# Foundation now needs NSDate / NSArray / NSPredicate alongside NSString
# for the EventKit calendar bridge. See src/calendar.rs.
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSDate",
    "NSArray",
    "NSPredicate",
    "NSError",
    "NSURL",
    # NSGeometry: NSPoint/NSSize/NSRect, used by the focus-pip global
    # mouse-moved monitor (commands::pip_hover) for cursor-vs-rect tests.
    "NSGeometry",
] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
# G3 (plan v3): pinned to ~0.3 minor line; bump intentionally and
# re-test the CalendarSource binding when updating. Known-good minor
# documented in src/calendar.rs.
objc2-event-kit = { version = "0.3", features = [
    "EKEventStore",
    "EKEvent",
    "EKCalendarItem",
    "EKCalendar",
    "EKObject",
    "EKParticipant",
    "EKTypes",
] }
block2 = "0.6"
